XMLtoCSV/objects/unpackaged/objects/Medical_Discussion_vod__c.object
<CustomObject>
    <description>Used to capture Medical Discussions that occur during an Interaction. The layout of the Medical Discussion section is displayed based on the page layout of the selected Medical Discussion record type.</description>
    <fields>
        <fullName>Account_Tactic_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If the Medical Discussion pertains to an Account Tactic, maintains the reference to that Tactic.</description>
        <label>Account Tactic</label>
        <referenceTo>Account_Tactic_vod__c</referenceTo>
        <relationshipLabel>Medical Discussions</relationshipLabel>
        <relationshipName>Medical_Discussion_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Account for which the Medical Discussion occurred.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Medical Discussions</relationshipLabel>
        <relationshipName>Medical_Discussion_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Attendee_Type_vod__c</fullName>
        <description>The type of entity who the Medical Discussion is created for.</description>
        <label>Attendee Type</label>
        <picklist>
            <picklistValues>
                <fullName>Person_Account_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group_Account_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>User_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact_vod</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Call2_Mobile_ID_vod__c</fullName>
        <description>The Mobile Id of the Call record that the Medical Discussion is associated to.</description>
        <label>Call Mobile Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Date_vod__c</fullName>
        <description>The Date of the Call record that the Medical Discussion is associated to.</description>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If the Medical Discussion pertains to a Contact, maintains the reference to that Contact.</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Medical Discussions</relationshipLabel>
        <relationshipName>Medical_Discussion_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Detail_Group_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>References the Product Group associated with the Medical Discussion.</description>
        <label>Detail Group</label>
        <referenceTo>Product_vod__c</referenceTo>
        <relationshipLabel>Medical Discussions</relationshipLabel>
        <relationshipName>Medical_Discussion_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Discussion_vod__c</fullName>
        <description>Used to capture the details of the Medical Discussion</description>
        <label>Discussion</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Entity_Reference_Id_vod__c</fullName>
        <description>Veeva internal field that ensures proper synchronization after account merges or territory realignments.</description>
        <label>Entity Reference Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interaction_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Interaction on which the Medical Discussion occurred.</description>
        <label>Interaction</label>
        <referenceTo>Call2_vod__c</referenceTo>
        <relationshipLabel>Medical Discussions</relationshipLabel>
        <relationshipName>Medical_Discussion_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Medical_Event_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If the Medical Discussion pertains to a Medical Event, maintains the reference to that Event.</description>
        <label>Medical Event</label>
        <referenceTo>Medical_Event_vod__c</referenceTo>
        <relationshipLabel>Medical Discussions</relationshipLabel>
        <relationshipName>Medical_Discussion_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mobile_ID_vod__c</fullName>
        <description>The Mobile Id of the Medical Discussion record.</description>
        <externalId>true</externalId>
        <label>Mobile Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Override_Lock_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to modify a submitted Medical Discussion without the need to unlock the record.</description>
        <label>Override Lock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PCYC_CSS_Text__c</fullName>
        <inlineHelpText>For capturing direct quote from the HCP.</inlineHelpText>
        <label>Verbatim</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PCYC_Company_Sponsored_Studies_Topic__c</fullName>
        <label>Topic</label>
        <picklist>
            <picklistValues>
                <fullName>SIV (Site Initiation Visit)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SIM (Site Investigator Meeting)/Patient Recruitment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Site Recommendation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Study Support</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PCYC_Company_Sponsored_Study__c</fullName>
        <label>Company Sponsored Studies</label>
        <picklist>
            <picklistValues>
                <fullName>PCYC-1115</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCYC-1116</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCYC-1118E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCYC-1119</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCYC-1121</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCYC-1123</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCYC-1124</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCYC-1125</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCYC-1126/ECOG1912</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCYC-1127</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCYC-1128</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCYC-1129</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCYC-1130</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCYC-1131</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCYC-1132</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCYC-1134 (INFORM CLL Registry)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCYC-1135</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCYC-1136</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCYC-1137</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCYC-1138</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCYC-1140</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCYC-1141</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCYC-1142</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCYC-1143</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JBI sponsored trials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCYC-1103</fullName>
                <isActive>false</isActive>
            </picklistValues>
            <picklistValues>
                <fullName>PCYC-1106</fullName>
                <isActive>false</isActive>
            </picklistValues>
            <picklistValues>
                <fullName>PCYC-1111</fullName>
                <isActive>false</isActive>
            </picklistValues>
            <picklistValues>
                <fullName>PCYC-1120</fullName>
                <isActive>false</isActive>
            </picklistValues>
            <picklistValues>
                <fullName>PCYC-1122E</fullName>
                <isActive>false</isActive>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PCYC_DT_Additional_Detail__c</fullName>
        <label>Additional Detail</label>
        <picklist>
            <controllingField>PCYC_DT_Detail__c</controllingField>
            <picklistValues>
                <fullName>Acalabrutinib</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemofree regimen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemo regimen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Co-morbidities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CYP Inducer/Inhibitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Toxicity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MRD Status</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PCYC_DT_Detail__c</fullName>
        <label>Detail</label>
        <picklist>
            <controllingField>PCYC_Scientific_Discussion__c</controllingField>
            <picklistValues>
                <fullName>A.Fib/Cardiac Events</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anticoagulant/Antiplatelet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bleeding Events</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BTKi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Combination</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dose adjustment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dose initiation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GI-related</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hypertension</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infections</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lymphocytosis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Novel agents</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resistence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Skin Disorders</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TTP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PCYC_DT_Text__c</fullName>
        <inlineHelpText>For capturing direct quote from the HCP.</inlineHelpText>
        <label>Verbatim</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PCYC_Disease_Topic__c</fullName>
        <label>Topic</label>
        <picklist>
            <picklistValues>
                <fullName>cGVHD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLL/SLL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DLBCL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MCL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MZL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solid Tumor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PCYC_FI_Text__c</fullName>
        <inlineHelpText>For capturing direct quote from the HCP.</inlineHelpText>
        <label>Verbatim</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PCYC_Field_Initiatives__c</fullName>
        <label>Field Initiatives</label>
        <picklist>
            <picklistValues>
                <fullName>RACE-2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inform CLL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post ASH 2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post ASCO 2017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>cGVHD Project Translate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Day 1 email MZL launch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1121 initiative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ICE-2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Speaker Training</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PCYC_IIS_Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Study Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Publication Projection</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PCYC_IIS_Text__c</fullName>
        <inlineHelpText>For capturing direct quote from the HCP.</inlineHelpText>
        <label>Verbatim</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PCYC_Investigator_Initiated_Studies__c</fullName>
        <label>Topic</label>
        <picklist>
            <picklistValues>
                <fullName>IST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COOP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CTEP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collaborative Research</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PCYC_MIRF_Case__c</fullName>
        <label>Case #</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCYC_MM_Text__c</fullName>
        <inlineHelpText>For capturing direct quote from the HCP.</inlineHelpText>
        <label>Verbatim</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PCYC_Managed_Market_Topic__c</fullName>
        <label>Topic</label>
        <picklist>
            <picklistValues>
                <fullName>Payer Presentation (Attach Presentation required)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VA Educational Project</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PCYC_Reported_as_per_SOP__c</fullName>
        <label>Reported as per SOP</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PCYC_Scientific_Discussion__c</fullName>
        <label>Scientific Discussion</label>
        <picklist>
            <picklistValues>
                <fullName>Concomitant – Interactions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dosage &amp; Administration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Efficacy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Safety</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Strategy_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If the Medical Discussion pertains to a Product Strategy, maintains the reference to that Strategy.</description>
        <label>Product Strategy</label>
        <referenceTo>Product_Strategy_vod__c</referenceTo>
        <relationshipLabel>Medical Discussions</relationshipLabel>
        <relationshipName>Medical_Discussion_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Tactic_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If the Medical Discussion pertains to a Product Tactic, maintains the reference to that Tactic.</description>
        <label>Product Tactic</label>
        <referenceTo>Product_Tactic_vod__c</referenceTo>
        <relationshipLabel>Medical Discussions</relationshipLabel>
        <relationshipName>Medical_Discussion_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>References the Product Detail or Topic associated with the Medical Discussion.</description>
        <label>Product</label>
        <referenceTo>Product_vod__c</referenceTo>
        <relationshipLabel>Medical Discussions (Product)</relationshipLabel>
        <relationshipName>Medical_Discussions_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If the Medical Discussion pertains to a User, maintains the reference to that User.</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Medical_Discussion_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zvod_Product_Map_vod__c</fullName>
        <description>Special field used to create dependent picklists on Medical Discussions based on product. The values for this field are the textual names of Product Details and Topics. This field should not be placed on any of the Medical Discussion page layouts.</description>
        <label>Product Map</label>
        <picklist>
            <picklistValues>
                <fullName>DELETE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Medical Discussion</label>
    <nameField>
        <displayFormat>MDI{000000000}</displayFormat>
        <label>Medical Discussion</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Medical Discussions</pluralLabel>
    <recordTypes>
        <fullName>Adverse_Event_Product_Complaint</fullName>
        <active>true</active>
        <label>Adverse Event/Product Complaint</label>
    </recordTypes>
    <recordTypes>
        <fullName>Company_Sponsored_Studies</fullName>
        <active>true</active>
        <label>Company Sponsored Studies</label>
    </recordTypes>
    <recordTypes>
        <fullName>Disease_Topic</fullName>
        <active>true</active>
        <label>Disease Topic</label>
    </recordTypes>
    <recordTypes>
        <fullName>Field_Initiatives</fullName>
        <active>true</active>
        <label>Field Initiatives</label>
    </recordTypes>
    <recordTypes>
        <fullName>Investigator_Initiated_Studies</fullName>
        <active>true</active>
        <label>Investigator Initiated Studies</label>
    </recordTypes>
    <recordTypes>
        <fullName>Managed_Market</fullName>
        <active>true</active>
        <label>Managed Market</label>
    </recordTypes>
    <recordTypes>
        <fullName>Medical_Discussion_vod</fullName>
        <active>true</active>
        <description>Standard record type used to create Medical Discussions.</description>
        <label>Medical_Discussion_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>Response_To_MIRF</fullName>
        <active>true</active>
        <label>Response To MIRF</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Blank_MIRF_Not_Allowed</fullName>
        <active>false</active>
        <errorConditionFormula>ISBLANK(PCYC_MIRF_Case__c)</errorConditionFormula>
        <errorDisplayField>PCYC_MIRF_Case__c</errorDisplayField>
        <errorMessage>Value required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Blank_Reported_as_per_SOP_Not_Allowed</fullName>
        <active>false</active>
        <errorConditionFormula>ISBLANK(TEXT(PCYC_Reported_as_per_SOP__c))</errorConditionFormula>
        <errorDisplayField>PCYC_Reported_as_per_SOP__c</errorDisplayField>
        <errorMessage>Value required</errorMessage>
    </validationRules>
</CustomObject>